--- a/src/assets/styles/layout/_sizes.scss
+++ b/src/assets/styles/layout/_sizes.scss
@@ -1,1 +1,2 @@
 $height-element: 48px;
+$margin-left-content: $height-element + 8px;
